added some styles2

--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,7 @@
 
   <section class="about-section ">
 
-    <div class="about-image-container center-column">
+    <div class="about-image-container ">
       <img src="../img/logo.png" alt="my logo">
     </div>
 
