added some styles

--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="../css/header.css">
   <link rel="stylesheet" href="../css/responsive.css">
   <link rel="stylesheet" href="../css/sections.css">
+  <link rel="stylesheet" href="../css/footer.css">
   <title>My Name | Role</title>
 </head>
 <body>
@@ -17,7 +18,7 @@
       <!-- left side -->
     <div class="logo center-row">
       <a href="">
-        <h2>my name</h2>
+        <h2>Cesar C C</h2>
       </a>
     </div>
 
@@ -30,7 +31,7 @@
         <a href="">About me</a>
         <a href="">Projects</a>
         <a href="">Experience</a>
-        <a href="">Contact</a>
+        <a href="./contact.html">Contact</a>
       </div>
     </nav>
   </header>
@@ -45,38 +46,72 @@
     <div class="about-description-container center-column" >
 
       <div class="center-column">
-        <h1>My role as developer</h1>
-        <h2>My name here</h2>
+        <h1>Full Stack Developer</h1>
+        <h2>Cesar Cordova Contreras</h2>
       </div>
 
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit illum nobis totam provident enim in quae corporis doloribus praesentium! Cum sit sunt omnis eius architecto, ullam doloribus quam fugit laboriosam?
-        Id, accusamus. Hic cum ducimus pariatur. Amet veritatis dignissimos deleniti molestiae quidem eligendi labore optio ab id at libero repellat, asperiores, vel a, voluptate repellendus perspiciatis necessitatibus! Aliquid, unde vitae.
-        Dignissimos eveniet necessitatibus voluptatem culpa nam saepe eius itaque expedita odit, quisquam aliquid tempora sit quo dolorum nesciunt perspiciatis magni amet totam. Consectetur possimus accusantium beatae id at et cumque!
-        Non in, commodi consequatur odio dolorum reiciendis natus cupiditate, molestias illum itaque optio vel quis eum deserunt accusantium! Voluptate commodi tempore iusto adipisci corrupti distinctio quae voluptatibus maiores aliquam suscipit?
-        Iure, dignissimos? Incidunt, architecto tenetur facere est aspernatur voluptatibus impedit fugiat alias esse deserunt adipisci? Eligendi, aliquam odio magni corporis iste dolore, blanditiis, totam quisquam aspernatur dolorem necessitatibus dolor nam.
+        I am a proactive person and I possess outstanding teamwork skills, always being responsible, organized and creative. 
+        My goal is to excel as a Full Stack Developer, providing innovative and effective solutions in each project. I am committed to constantly updating and improving my technical skills and knowledge.
       </p>
 
     <div class="skill-list center-column">
       <h2>My skills</h2>
 
       <div class="tags-container">
-        <label>My skill</label>
-        <label>My skill</label>
-        <label>My skill</label>
-        <label>My skill</label>
-        <label>My skill</label>
-        <label>My skill</label>
-        <label>My skill</label>
-        <label>My skill</label>
-        <label>My skill</label>
+        <label>Java Script </label>
+        <label>Node JS</label>
+        <label>React JS</label>
+        <label>Express JS</label>
+        <label>Postgre sql</label>
+        <label>Vite JS</label>
+        <label>Contributor</label>
+        <label>Empathetic</label>
+        <label>Organized</label>
       </div>
 
     </div>
   </div>
 
-
   </section>
+
+  <!-- Project section -->
+  <section class="project-section center-column">
+    <h2>Projects</h2>
+    <div class="projects-container">
+        <div class="project-card">
+            <img src="../img/picture-1.jpg" alt="Project image">
+            <div class="project-info">
+                <h3>Project Name</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, saepe! Magni, </p>
+                <div class="project-tags">
+                    <span>Django</span>
+                    <span>CSS</span>
+                    <span>HTML</span>
+                    <span>Other</span>
+                </div>
+                <span class="project-year">2020</span>
+            </div>
+        </div>
+
+
+      
+    </div>
+  </section>
+
+  <footer>
+    <div class="footer-container ">
+      <div class="footer-logo">
+        <h2>Cesar C C</h2>
+      </div>
+      <nav class="footer-links ">
+        <a href="">About me</a>
+        <a href="">Projects</a>
+        <a href="">Experience</a>
+        <a href="">Contact</a>
+      </nav>
+    </div>
+  </footer>
 
 </body>
 </html>
