--- a/html/index.html
+++ b/html/index.html
@@ -40,7 +40,7 @@
   <section class="about-section ">
 
     <div class="about-image-container ">
-      <img src="../img/logo.png" alt="my logo">
+      <img src="../img/me.jpg" alt="my logo">
     </div>
 
     <div class="about-description-container center-column" >
@@ -75,43 +75,6 @@
 
   </section>
 
-  <!-- Project section -->
-  <section class="project-section center-column">
-    <h2>Projects</h2>
-    <div class="projects-container">
-        <div class="project-card">
-            <img src="../img/picture-1.jpg" alt="Project image">
-            <div class="project-info">
-                <h3>Project Name</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, saepe! Magni, </p>
-                <div class="project-tags">
-                    <span>Django</span>
-                    <span>CSS</span>
-                    <span>HTML</span>
-                    <span>Other</span>
-                </div>
-                <span class="project-year">2020</span>
-            </div>
-        </div>
-
-
-      
-    </div>
-  </section>
-
-  <footer>
-    <div class="footer-container ">
-      <div class="footer-logo">
-        <h2>Cesar C C</h2>
-      </div>
-      <nav class="footer-links ">
-        <a href="">About me</a>
-        <a href="">Projects</a>
-        <a href="">Experience</a>
-        <a href="">Contact</a>
-      </nav>
-    </div>
-  </footer>
 
 </body>
 </html>
